feat: Add production readiness fixes for Render deployment
- Add environment variable validation with security checks
- Add Helmet security middleware and request size limits
- Add health check endpoints (/health, /api/health)
- Fix CORS cookie settings for production (sameSite: none)
- Remove insecure JWT_SECRET fallbacks
- Add rate limiting to authentication endpoints (5 req/15min)
- Add database connection retry logic with exponential backoff
- Create Render deployment configuration (render.yaml)
- Update .env.example with comprehensive production guidance
- Add helmet and express-rate-limit dependencies

Security improvements:
- Environment validation prevents weak secrets
- Rate limiting prevents brute force attacks
- Helmet adds security headers (XSS, CSP, etc.)
- No fallback values for sensitive credentials

Reliability improvements:
- Database retry logic handles transient failures
- Health checks for monitoring and load balancers
- Request size limits prevent large payload attacks

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,49 @@
+# ============================================
+# Job Application Tracker - Backend Configuration
+# ============================================
+
 # Server Configuration
+# --------------------
 PORT=5000
-NODE_ENV=development
+NODE_ENV=development  # Use 'production' when deploying
 
-# Database
+# Database Configuration
+# ----------------------
+# MongoDB connection string
+# For production: Use MongoDB Atlas or managed MongoDB service
+# Format: mongodb+srv://USERNAME:PASSWORD@CLUSTER.mongodb.net/DATABASE?retryWrites=true&w=majority
+# For local development: mongodb://localhost:27017/job-tracker
 MONGODB_URI=mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@YOUR_CLUSTER.mongodb.net/YOUR_DATABASE?retryWrites=true&w=majority
-MONGODB_NAME=YOUR_DATABASE_NAME
 
-# JWT
+# Database name (optional, can be included in MONGODB_URI)
+MONGODB_NAME=job_tracker
+
+# JWT Authentication
+# ------------------
+# IMPORTANT: Generate a strong random secret for production
+# Minimum 32 characters required in production
+# Generate using: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+# JWT token expiration time
+# Examples: '7d' (7 days), '24h' (24 hours), '30m' (30 minutes)
 JWT_EXPIRE=7d
 
-# Frontend URL (for CORS)
+# CORS Configuration
+# ------------------
+# Frontend URL for CORS (required in production)
+# Examples: 
+#   - Development: http://localhost:5173
+#   - Production: https://your-frontend-app.vercel.app
 FRONTEND_URL=http://localhost:5173
+
+# ============================================
+# Production Deployment Checklist
+# ============================================
+# Before deploying to production:
+# 1. Set NODE_ENV=production
+# 2. Generate a strong JWT_SECRET (min 32 chars)
+# 3. Use MongoDB Atlas or managed database
+# 4. Set FRONTEND_URL to your production frontend URL
+# 5. Never commit .env file to version control
+# ============================================
