--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,9 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.1",
+    "helmet": "^8.1.0",
     "jest": "^29.7.0",
     "json2csv": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
